[gd_scene load_steps=7 format=3 uid="uid://1hsdrtjegx44"]

[ext_resource type="Theme" uid="uid://exgmmsg3rnfw" path="res://resources/default_theme.tres" id="1_55lbm"]
[ext_resource type="Script" path="res://scripts/ui/chat_view.gd" id="2_6qdrt"]
[ext_resource type="PackedScene" uid="uid://cmmwsp3qeepka" path="res://scenes/ui/message.tscn" id="2_ik8f6"]
[ext_resource type="Texture2D" uid="uid://c6bidroy5cjdw" path="res://assets/avatars/sample_avatar_01.png" id="3_l3sia"]
[ext_resource type="Texture2D" uid="uid://bxxg1hfy3m70m" path="res://assets/avatars/sample_avatar_02.png" id="4_f6n05"]
[ext_resource type="PackedScene" uid="uid://dx0c2ccc7ixyx" path="res://scenes/ui/system_message.tscn" id="6_cpp14"]

[node name="ChatView" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_55lbm")
script = ExtResource("2_6qdrt")

[node name="ChatContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NamePanel" type="PanelContainer" parent="ChatContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ChatContainer/NamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BackButton" type="Button" parent="ChatContainer/NamePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "后退"

[node name="CenterContainer" type="CenterContainer" parent="ChatContainer/NamePanel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="ChatContainer/NamePanel/MarginContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("1_55lbm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48

[node name="ScenePanel" type="PanelContainer" parent="ChatContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ChatContainer/ScenePanel"]
custom_minimum_size = Vector2(0, 480)
layout_mode = 2
size_flags_stretch_ratio = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="ChatContainer/ScenePanel/MarginContainer2"]
clip_contents = true
custom_minimum_size = Vector2(0, 256)
layout_mode = 2

[node name="Control" type="Control" parent="ChatContainer/ScenePanel/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ChatContainer/ScenePanel/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 8

[node name="Control" type="Control" parent="ChatContainer/ScenePanel/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="ChatContainer/ScenePanel/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
texture = ExtResource("3_l3sia")
flip_h = true

[node name="Control2" type="Control" parent="ChatContainer/ScenePanel/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="ChatContainer/ScenePanel/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
texture = ExtResource("4_f6n05")

[node name="Control3" type="Control" parent="ChatContainer/ScenePanel/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatWindow" type="PanelContainer" parent="ChatContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ChatContainer/ChatWindow"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="MessageList" type="VBoxContainer" parent="ChatContainer/ChatWindow/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Message12" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("2_ik8f6")]
layout_mode = 2

[node name="Message" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("2_ik8f6")]
layout_mode = 2

[node name="SystemMessage" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("6_cpp14")]
layout_mode = 2

[node name="Message2" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("2_ik8f6")]
layout_mode = 2

[node name="Message6" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("2_ik8f6")]
layout_mode = 2

[node name="Message3" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("2_ik8f6")]
layout_mode = 2

[node name="Message4" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("2_ik8f6")]
layout_mode = 2

[node name="Message5" parent="ChatContainer/ChatWindow/ScrollContainer/MessageList" instance=ExtResource("2_ik8f6")]
layout_mode = 2

[node name="MessagePanel" type="PanelContainer" parent="ChatContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="ChatContainer/MessagePanel"]
layout_mode = 2
theme_override_constants/margin_left = 36
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 36
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="ChatContainer/MessagePanel/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="HBoxContainer2" type="HBoxContainer" parent="ChatContainer/MessagePanel/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="ActionInput" type="LineEdit" parent="ChatContainer/MessagePanel/MarginContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "action"

[node name="DialogueTarget" type="OptionButton" parent="ChatContainer/MessagePanel/MarginContainer3/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
item_count = 1
popup/item_0/text = "自言自语"

[node name="HBoxContainer" type="HBoxContainer" parent="ChatContainer/MessagePanel/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="DialogueContent" type="LineEdit" parent="ChatContainer/MessagePanel/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_55lbm")
text = "aaaa"

[node name="MarginContainer" type="MarginContainer" parent="ChatContainer/MessagePanel/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="ChatContainer/MessagePanel/MarginContainer3/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_55lbm")
text = "发送"

[node name="NotMemberPanel" type="PanelContainer" parent="ChatContainer/MessagePanel"]
visible = false
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ChatContainer/MessagePanel/NotMemberPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="ChatContainer/MessagePanel/NotMemberPanel/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "未加入对话"

[node name="NoChatPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="NoChatPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="NoChatPanel/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "请选择聊天"

[editable path="ChatContainer/ChatWindow/ScrollContainer/MessageList/Message"]
[editable path="ChatContainer/ChatWindow/ScrollContainer/MessageList/Message6"]
